[metadata]
name = typedate
version = 1.0.1
author = righ
author_email = righ.m9@gmail.com
url = https://github.com/righ/typedate
license = Apache Software License 2.0
classifier = 
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Programming Language :: Python
  Topic :: Software Development
keywords = 
    argparse
    date
    datetime
    timedelta
    timezone
description = Parsers related time for argparse
long_description = file: README.rst

[options]
packages = find:
